style:my profile

--- a/locales/en.json
+++ b/locales/en.json
@@ -100,7 +100,8 @@
   "Under review": "Under review",
   "Not passed": "Not passed",
   "Retract": "Retract",
-  "View All": "View All",
+  "viewAll": "View All",
+  "putAway": "PUT AWAY",
   "Sorry!": "Sorry!",
   "You are not Hexagon developer Please go to DeCheck DAO for certification": "You are not Hexagon developer Please go to DeCheck DAO for certification",
   "Certification": "Certification",
@@ -191,5 +192,22 @@
   "card_one":"An organization for project reviews",
   "card_two":"Join DeCheck for project reviews",
   "card_three":"Complete project reviews for airdrop",
-  "card_four":"More airdrops if you're a developer"
+  "card_four":"More airdrops if you're a developer",
+  "wacthlist": "Wacth List",
+  "profile": "My Profile",
+  "collect": "Collect",
+  "collected": "Collected",
+  "links": "Links",
+  "share": "Share",
+  "myComment": "MY COMMENT",
+  "editComment": "EDIT COMMENT",
+  "rateItem": "RATE THIS ITEM",
+  "waiteReview": "WRITE A REVIEW",
+  "noMore": "No more data",
+  "searchAddress": "Search contract address",
+  "mostSrearch": "MOST SEARCHES",
+  "dck": "DCK Reward",
+  "lucky": "Lucky Box",
+  "invite": "Invite Reward",
+  "bounty": "Decheck Bounty"
 }
