--- a/locales/zh-cn.json
+++ b/locales/zh-cn.json
@@ -100,7 +100,8 @@
   "Under review": "审核中",
   "Not passed": "未通过",
   "Retract": "收起",
-  "View All": "展开",
+  "viewAll": "展开",
+  "putAway": "收起",
   "Sorry!": "抱歉！",
   "You are not Hexagon developer Please go to DeCheck DAO for certification": "你不是DeCheck的社区成员，请前往DeCheck DAO进行身份认证",
   "Certification": "认证",
@@ -191,5 +192,22 @@
   "card_one":"围绕项目点评的DAO组织",
   "card_two":"加入DeChcek DAO参与点评",
   "card_three":"完成项目点评获取空投激励",
-  "card_four":"认证社区角色获取更多空投"
+  "card_four":"认证社区角色获取更多空投",
+  "wacthlist": "收藏列表",
+  "profile": "我的资料",
+  "collect": "收藏",
+  "collected": "已收藏",
+  "links": "链接",
+  "share": "分享",
+  "myComment": "我的评论",
+  "editComment": "编辑评论",
+  "rateItem": "评价这个项目",
+  "waiteReview": "编写评论",
+  "noMore": "没有更多的数据",
+  "searchAddress": "查询合约地址",
+  "mostSrearch": "热门搜索",
+  "dck": "DCK奖励",
+  "lucky": "幸运盒子",
+  "invite": "邀请奖励",
+  "bounty": "Decheck赏金"
 }
